--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
     "core-js": "^2.5.7",
+    "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "rxjs": "^5.5.12",
     "semantic-ui-css": "^2.4.1",
@@ -33,6 +34,7 @@
     "@angular/language-service": "^5.2.11",
     "@types/jasmine": "^2.8.11",
     "@types/jasminewd2": "^2.0.6",
+    "@types/jquery": "^3.3.29",
     "@types/node": "^6.14.1",
     "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
